Update rtx.conf to always show cursor in overlay

--- a/rtx.conf
+++ b/rtx.conf
@@ -208,7 +208,7 @@ rtx.enablePSTR = True
 rtx.enablePSTROutgoingSplitApproximation = True
 rtx.froxelMinReservoirSamplesStabilityHistory = 1
 rtx.enablePSTRSecondaryIncidentSplitApproximation = True
-rtx.showUICursor = False
+rtx.showUICursor = True
 rtx.enablePortalFadeInEffect = False
 rtx.opaqueMaterial.layeredWaterNormalMotionScale = 9
 rtx.enablePresentThrottle = False
